# bsmp

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
bsmp/: __init__.py
bsmp/data_models/: __init__.py  data_loader.py
bsmp/examples/: model_fit_and_predict.ipynb
bsmp/scrapers/: match_data.py  match_ids.py  odds_data.py  update_database.py
bsmp/scrapers/core/: __init__.py  browser.py  database.py
bsmp/sports_model/: base_bayesian.py  ensemble.py  evaluator.py  hierarchical_bayesian.py  implied_odds.py  jackknife_estimates.py  log_likelihood.py  odds.py  test_model.py  utils.py
bsmp/sports_model/bayesian/: base_bayesian.py  nbinom_hierarchical.py  poisson_hierarchical.py  probability_grid.py
bsmp/sports_model/bayesian/stan_files/: nbinom_hierarchical.stan  poisson_hierarchical.stan
bsmp/sports_model/ensemble/: __init__.py  base_ensemble.py  nnls_ensemble.py  simple_ensemble.py
bsmp/sports_model/frequentist/: __init__.py  base_model.py  bradley_terry.py  bradley_terry_model.py  bradley_terry_oop.py  dixon_coles.py  gssd_model.py  poisson.py  prp_model.py  toor.py  toor_model.py  zsd_model.py
bsmp/sports_model/metrics/: metrics.py
bsmp/sports_model/stan_files/: hierarchical_bayesian  hierarchical_bayesian.stan  test_model  test_model.stan
config/: flashscore_urls.yaml
data/processed/: database.db
database/: database.db
src/scrapers/: match_data.py  match_ids.py  odds_data.py
src/scrapers/core/: browser.py
